# voltmeter_control_client_server

./: README.md
client/: client.pro  controlboard.cpp  controlboard.h  controlboard.ui  main.cpp  protocol.cpp  protocol.h
server/: CMakeLists.txt  channel.cpp  channel.h  commands.h  device.cpp  device.h  logger.cpp  logger.h  main.cpp  server.cpp  server.h
